# magudi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  Readme.txt
docker/: Dockerfile
docs/: STYLE.md
examples/: input  magudi.inp
include/: AcousticNoise.f90  AcousticSource.f90  ActuatorPatch.f90  AdiabaticWall.f90  BlockInterfacePatch.f90  CNSHelper.f90  Combustion.f90  ControlSpaceAdvancer.f90  Grid.f90  (+85 more)
test/: CMakeLists.txt  SBP_property.f90  adjoint_relation.f90  block_interface_sign.f90  boundary_operator.f90  composite_dissipation_sanity.f90  dissipation_self_adjoint.f90  drag_adjoint_forcing.f90  impenetrable_wall_SAT.f90  incoming_inviscid_flux_jacobian.f90  inviscid_flux_jacobian.f90  isothermal_wall_SAT.f90  operator_convergence.f90  options_parser.f90  patch_collectives.f90  stencil_coefficients.f90  testZAXPY.f90
test/adjoint_relation/: CMakeLists.txt  SAT_block_interface.f90  SAT_block_interface.sh  SAT_farfield.f90  SAT_isothermal.f90  SBP_operators.f90  SBP_operators_grid.f90  adjoint_forcing.f90  artificial_dissipation.f90  body_force.f90  config.py  control_functional.f90  control_functional.sh  full_rhs.f90  full_rhs.sh  initial_condition.f90  initial_condition.sh  inviscid_flux.f90  magudi.inp  sponge.f90  stress_tensor.f90  time_integrator.f90  viscous_flux.f90
test/adjoint_relation/block_interface_inputs/: magudi.inp
test/block_interface_inputs/: config.py  magudi.inp
test/jupyter/: gradient_accuracy.ipynb  ic_gradient_accuracy.ipynb  matching_condition.ipynb  multiple_shooting_optimization.ipynb  multiple_shooting_sensitivity.ipynb  multiple_shooting_sensitivity_library.ipynb  paste_control_forcing.ipynb
test/linearized_relation/: CMakeLists.txt  SAT_block_interface_linearized.f90  SAT_block_interface_linearized.sh  SAT_farfield_linearized.f90  SAT_isothermal_linearized.f90  artificial_dissipation_linearized.f90  body_force_linearized.f90  full_rhs_linearized.f90  full_rhs_linearized.sh  inviscid_flux_linearized.f90  sponge_linearized.f90  stress_tensor_grad.f90  stress_tensor_grad2.f90  stress_tensor_grad3.f90  viscous_flux_C.f90  viscous_flux_linearized.f90
test/python/: Lighthill_source_test.py  checkGradientAccuracy_augmented_lagrangian.py  magudi.LighthillTest.inp
utils/: CMakeLists.txt  append_gradient.f90  control_forcing_magnitude_in_time.f90  control_mollifier_factor.f90  control_space_norm.f90  cost_functional.f90  cost_spatial_distribution.f90  counterflow_diffusion.f90  data2ensight.f90  extend_control_forcing.f90  grid_generator.f90  ibm_levelset.f90  jet.f90  jet_crossflow.f90  jet_initial_condition.f90  merge_gradient.f90  mixing_layer.f90  mollifier2ensight.f90  paste_control_forcing.f90  premixed.f90  probe_from_qfile.f90  q_criterion.f90  qfile_zaxpy.f90  reactive_jet.f90  rhs.f90  saveGridNorm.f90  shear_layer.f90  shear_stress_probe_average.f90  spatial_inner_product.f90  spectral_radius.f90  velocity_gradient.f90  vorticity_dilatation.f90  zxdoty_in_time.f90
utils/data2ensight/: CMakeLists.txt  data2ensight.f90
utils/inexactnewton/: filenames-newton.py  filenames_newton.py  inexactNewton.py  newton.py
utils/init_flow/: CMakeLists.txt  CounterflowDiffusion.f90  Jet.f90  JetCrossflow.f90  MixingLayer.f90  Premixed.f90  init_flow.f90
utils/legacy/: README.md
utils/legacy/inexactnewton/: newton.py
utils/legacy/optimization/: ZAXPY.sh  adjoint.sh  linmin.py
utils/legacy/optimization_ver2/: OPT-init.sh  OPT.sh  command_scriptor.py  dir-setup.sh  filenames.py  lagrangian_zaxpy.sh  linmin.py  mnbrak.py  purge_control_files.sh
utils/legacy/optimization_ver3/: DIRECTORY_STRUCTURE.md  OPT.sh  check.flux  constants.py  example.yml  optimization.py
utils/legacy/python/: checkGradientAccuracy_linearized.py
utils/magudi_utils/: DESIGN.md  README.md  pyproject.toml
utils/magudi_utils/src/magudi_utils/: PLOT3D.py  RoundJet.py  SingleBlockCartesian.py  __init__.py  fwhsolver.py  line_search.py  matplotlibhelper.py  msgrad_test.py  optim.py  optim_state.py  optimizers.py  parallel_io.py
utils/mollifier2ensight/: CMakeLists.txt
utils/optimization/: OPT.sh  base.py  conjugate_gradient_test.ipynb  copyBasicFiles.sh  forward.sh  frprmn.py  intermediate_forward_runs.sh  linmin.py  mnbrak.py  optimization.py
utils/optimization_ver2/: OPT-init.flux  OPT-init.sh  OPT-temp.flux  OPT.flux  base.py  base_extension.py  checkGradientAccuracy.py  command_scriptor.py  constants.py  filenames.py  frprmn.py  initial.py  linmin.py  magudi-setup.py  mnbrak.py  optimization.py  parallelBashCommand.py  penalty_norm.py  purge_control_files.sh
utils/optimization_ver3/: OPT.flux  OPT.sh  base.py  base_extension.py  check.flux  checkGradientAccuracy.py  command_scriptor.py  constants.py  example.yml  filenames.py  initial.py  optimization.py  optimizer.py  parser.py  penalty_norm.py
utils/optimization_ver4/: DESIGN.md  README.md  compare_spawn.bash  inputs.py  msgrad_test.py  optim.parallel.py  optim.parallel.strawman.py  optim.py  parallel_io.py  pyproject.toml  run_msgrad.sh  run_parallel.sh  run_parallel.strawman.sh  run_strawman.sh  spawn_one_forward.py  toy_optim.py
utils/optimization_ver4/slurm_check/: Makefile  README.md  check_pmix.sh  run_test.sh  spawn_child.c  test_spawn.py
utils/optimization_ver4/src/magudi_optimizer/: __init__.py  inputs.py  msgrad_test.py  optim.py  parallel_io.py  plot3dnasa.py
utils/optimization_ver4/srun_check/: Makefile  README.md  check_srun.sh  run_test.sh  test_subprocess.py  worker.c
utils/paraview/: paraview_average_over_constant_radius.py  paraview_vorticity_dilatation.py
utils/python/: CMakeLists.txt  MatplotlibHelper.py  PLOT3D.py  RoundJet.py  SingleBlockCartesian.py  SummationByParts.py  checkGradientAccuracy.py  checkGradientAccuracy_linearized.py  fwhsolver.py  matplotlibhelper.py  plot3dnasa.py
utils/python/deprecate-py2/: PLOT3D.py  checkGradientAccuracy.py  fwhsolver.py  plot3dnasa.py
utils/rhs/: CMakeLists.txt  rhs.f90
utils/spectral_radius/: CMakeLists.txt  spectral_radius.f90
utils/visualization/: adjoint.py  png.sh
utils/vorticity_dilatation/: CMakeLists.txt
(+310 files in other folders)
