add_executable(vorticity_dilatation $<TARGET_OBJECTS:magudiObj> vorticity_dilatation.f90)
add_executable(spectral_radius $<TARGET_OBJECTS:magudiObj> spectral_radius.f90)
add_executable(jet $<TARGET_OBJECTS:magudiObj> jet.f90)
add_executable(shear_layer $<TARGET_OBJECTS:magudiObj> shear_layer.f90)
add_executable(grid_generator $<TARGET_OBJECTS:magudiObj> grid_generator.f90)
add_executable(rhs $<TARGET_OBJECTS:magudiObj> rhs.f90)
add_executable(cost_functional $<TARGET_OBJECTS:magudiObj> cost_functional.f90)
add_executable(append_gradient $<TARGET_OBJECTS:magudiObj> append_gradient.f90)
add_executable(probe_from_qfile $<TARGET_OBJECTS:magudiObj> probe_from_qfile.f90)
