add_executable(vorticity_dilatation $<TARGET_OBJECTS:magudiObj> vorticity_dilatation.f90)
add_executable(spectral_radius $<TARGET_OBJECTS:magudiObj> spectral_radius.f90)
add_executable(jet $<TARGET_OBJECTS:magudiObj> jet.f90)
add_executable(shear_layer $<TARGET_OBJECTS:magudiObj> shear_layer.f90)
add_executable(grid_generator $<TARGET_OBJECTS:magudiObj> grid_generator.f90)
add_executable(rhs $<TARGET_OBJECTS:magudiObj> rhs.f90)
add_executable(cost_functional $<TARGET_OBJECTS:magudiObj> cost_functional.f90)
add_executable(append_gradient $<TARGET_OBJECTS:magudiObj> append_gradient.f90)
add_executable(probe_from_qfile $<TARGET_OBJECTS:magudiObj> probe_from_qfile.f90)
add_executable(control_space_norm $<TARGET_OBJECTS:magudiObj> control_space_norm.f90)
add_executable(slice_control_forcing $<TARGET_OBJECTS:magudiObj> slice_control_forcing.f90)
add_executable(paste_control_forcing $<TARGET_OBJECTS:magudiObj> paste_control_forcing.f90)
add_executable(extend_control_forcing $<TARGET_OBJECTS:magudiObj> extend_control_forcing.f90)
add_executable(cost_spatial_distribution $<TARGET_OBJECTS:magudiObj> cost_spatial_distribution.f90)
add_executable(spatial_inner_product $<TARGET_OBJECTS:magudiObj> spatial_inner_product.f90)
add_executable(qfile_zaxpy $<TARGET_OBJECTS:magudiObj> qfile_zaxpy.f90)
add_executable(control_mollifier_factor $<TARGET_OBJECTS:magudiObj> control_mollifier_factor.f90)
add_executable(control_forcing_magnitude_in_time $<TARGET_OBJECTS:magudiObj> control_forcing_magnitude_in_time.f90)
