[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "magudi_utils"
version = "0.1.0"
description = "Python utilities for the magudi PDE solver: PLOT3D I/O, mesh helpers, FWH solver, and the PETSc/TAO L-BFGS optimization driver."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "progressbar",
  "h5py",
  "PyYAML",
  "mpi4py",
  "petsc4py>=3.25.1",
  "joblib",
]

[project.scripts]
magudi-optim  = "magudi_utils.optim:main"
magudi-msgrad = "magudi_utils.msgrad_test:main"

[tool.setuptools.packages.find]
where = ["src"]